refactoring 2 programms to one

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,6 @@
     <properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <com.h2database.h2.version>1.4.196</com.h2database.h2.version>
         <mysql.mysql-connector-java.version>5.1.46</mysql.mysql-connector-java.version>
         <org.hibernate.hibernate-core.version>4.3.11.Final</org.hibernate.hibernate-core.version>
     </properties>
@@ -50,11 +49,6 @@
             <version>${mysql.mysql-connector-java.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <version>${com.h2database.h2.version}</version>
-        </dependency>
-        <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
             <version>${org.hibernate.hibernate-core.version}</version>
@@ -73,6 +67,11 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.telegram</groupId>
+            <artifactId>telegrambots</artifactId>
+            <version>4.0.1</version>
         </dependency>
     </dependencies>
 
